		  when > 2Go. Now make use of 64 bits value for the network
		  load (See: bugs.debian.org/118728, thanks Eduard Bloch)
	- bugfix: fix for sefault when TrayDrawBevel=1 (thanks Julien Lemoine)
	- bugfix: fix for a window position which marches up the screen, noticeable
                  when launching Galeon and Xchat (thanks Julien Lemoine)
	- bugfix: fix display of taskbar(in hide mode)

1.0.9-2: 2001-10-09
        - bugfix: show application supplied frame icons even if without
          icon mask
        - bugfix (for binary distribution): determinate the langinfo
          codeset item id on runtime
        - bugfix: remove icons from icon cache when destroyed
        - bugfix/compatiblity hack: fallback to linux.xpm when provided by
          the current theme
        - bugfix: window menu crashed when tray completely disabled
        - bugfix: tray crashed when compiled without gradient support
        - bugfix: #469081 Java cause IceWM to crash on mapping

1.0.9: 2001-10-08
        - bugfix: #209114 fixed?
        - feature: new translations: Croatian (Vlatko Kosturjak),
          Italian (Riccardo Murri), Lithuanian (Gediminas Paulauskas),
          Polish (Przemyslaw Sulek), Romanian (Tiberiu Micu)
	- bugfix: killed dangling WindowOptions::icon pointer in combineOptions
	- bugfix: limitSize still was broken (Max Kirillov)
        - bugfix/feature: ColorScrollBarInactiveArrow
        - feature: continuous edge switching
        - bugfix: colored edge switching cursors
        - bugfix: COMPOUND_TEXT handling (Florin)
        - feature: HorizontalEdgeSwitch and VerticalEdgeSwitch
        - feature: LowerOnClickWhenRaised lower the active window when
          clicked again
        - bugfix: #445264 CenterMaximizedWindows=0 was broken
	- bugfix: dynamic chaning of client icons
	- bugfix: reparenting (aka. swallowing) should work now
	- bugfix: comments into config examples about discarding of changes