@@ -949,6 +949,8 @@ void YWMApp::actionPerformed(YAction *action, unsigned int /*modifiers*/) {
                 msgbox->setMsgBoxListener(this);
                 msgbox->showFocused();
             }
+#else
+            logout();
 #endif
         }
     } else if (action == actionCancelLogout) {
@@ -1134,10 +1136,14 @@ YWMApp::YWMApp(int *argc, char ***argv, const char *displayName):
         switchWindow = new SwitchWindow(manager);
 #endif
 #ifdef CONFIG_TASKBAR
+    printf("[%i]\n", showTaskBar);
     if (showTaskBar) {
         taskBar = new TaskBar(manager);
         if (taskBar)
+	  {
+	    printf("affichage\n");
             taskBar->showBar(true);
+	  }
     } else {
         taskBar = 0;
     }
