@@ -11,6 +11,7 @@
 	- bugfix: fix for a window position which marches up the screen, noticeable
                   when launching Galeon and Xchat (thanks Julien Lemoine)
 	- bugfix: fix display of taskbar(in hide mode)
+	- bugfix: fix logout problem (int icewm-lite)
 
 1.0.9-2: 2001-10-09
         - bugfix: show application supplied frame icons even if without
